# boat-rudder

./: .bashrc  .gitignore  CMakeLists.txt  LEAME.md  README.md  boat-rudder.service  code_to_file.sh  compile.sh  compile_debug.sh  copy.sh  create-cert-ssl.sh  image-convert.sh  install.sh  run.sh  run_development.sh  uninstall.sh
configs/: config.txt  googlesheets.txt
server/: http_server.c
show/: welcome
src/: main.c  orchestrator.c
src/api/: blog_entry_items.c  blog_entry_items.h  data_fetcher.c  data_fetcher.h  google_sheets_api.c  google_sheets_api.h  home_blog_items.c  home_blog_items.h  page_items.c  page_items.h  route.c  route.h
src/html/: container.html  index.html  menu.html  menu_template.html  script.js  styles.css
src/html/blog/: blog-container_std2.html
src/html/blog-home/: blog-home_std2.html
src/html/blog/home-blog/: home-blog-item_std2.html  home-blog_std2.html
src/html/container/: container_std2.html
src/html/elements/gallery/: gallery-container_std2.html
src/html/elements/image/: image_std2.html
src/html/elements/paragraph/: paragraph_std2.html
src/html/elements/tittle/: tittle_std2.html
src/html/home-blog/: home-blog-item_std2.html
src/html/menu/: menu-item_std2.html  menu_std2.html
src/html/slider/: slider_std2.html
src/html/themes/dark/: styles_epoch3.css  styles_std2.css
src/html/themes/dark copy/: styles_std2.css
src/html/themes/dark copy/blog/: blog-entry_std2.html
src/html/themes/dark copy/container/: container_std2.html
src/html/themes/dark copy/menu/: menu-item-selected_std2.html  menu-item-separator_std2.html  menu_std2.html
src/html/themes/dark copy/slider/: slider_std2.html
src/html/themes/dark/blog/: blog-container_epoch1.html
src/html/themes/dark/container/: container_epoch1.html  container_epoch3.html  container_std2.html
src/html/themes/dark/home-blog/: home-blog-item_epoch1.html  home-blog-item_epoch3.html  home-blog_epoch1.html  home-blog_epoch2.html  home-blog_epoch3.html
src/html/themes/dark/mainbanner/: mainbanner_epoch1.html  mainbanner_epoch2.html  mainbanner_epoch3.html
src/html/themes/dark/menu/: menu-item-selected_epoch1.html  menu-item-selected_epoch3.html  menu-item-separator_epoch1.html  menu-item-separator_std2.html  menu-item_epoch1.html  menu-item_epoch3.html  menu-item_std2.html  menu-option_epoch2.html  menu-option_epoch3.html  menu_epoch1.html  menu_epoch2.html  menu_epoch3.html  menu_std2.html
src/html/themes/dark/page/: page-container_epoch1.html  page-container_epoch3.html
src/html/themes/dark/slider/: slider_epoch1.html  slider_epoch3.html
src/html/themes/light/: styles_std2.css
src/include/: config_loader.h  detect_epoch.h  generate_url_theme.h  json_parser.h  log.h  orchestrator.h  print_table.h  read_file.h  request_handler.h
src/include/code_formatter/: escape_code.h  highlight_basic.h  highlight_c.h  highlight_code.h  highlight_css.h  highlight_html.h  highlight_js.h  highlight_php.h  highlight_prolog.h  highlight_python.h
src/include/code_highlight/: escape_code.h  highlight_bash.h  highlight_basic.h  highlight_bat.h  highlight_c.h  highlight_code.h  highlight_css.h  highlight_html.h  highlight_js.h  highlight_php.h  highlight_prolog.h  highlight_python.h
src/lib/: libcurl.so.4.8.0
src/modules/blog/: blog.c  blog.h  blog_entry.c  blog_entry.h
src/modules/blog_home/: blog_home.c  blog_home.h
src/modules/container/: container.c  container.h
src/modules/home_blog/: home_blog.c  home_blog.h
src/modules/mainbanner/: mainbanner.c  mainbanner.h
src/modules/menu/: menu.c  menu.h
src/modules/page/: page.c  page.h
src/modules/slider/: slider.c  slider.h
src/utils/: config_loader.c  detect_epoch.c  generate_url_theme.c  json_parser.c  log.c  print_table.c  read_file.c  server_utils.c
src/utils/code_formatter/: escape_code.c  highlight_basic.c  highlight_c.c  highlight_code.c  highlight_css.c  highlight_html.c  highlight_js.c  highlight_php.c  highlight_prolog.c  highlight_python.c
src/utils/code_highlight/: escape_code.c  highlight_bash.c  highlight_basic.c  highlight_bat.c  highlight_c.c  highlight_code.c  highlight_css.c  highlight_html.c  highlight_js.c  highlight_php.c  highlight_prolog.c  highlight_python.c
src/utils/curl/: curl.h
src/web-server/: main.c  request_handler.c  server-ssl.c  server.c  utils.c
src/web-server/include/: utils.h
src/web-server/old/: server.c
(+34 files in other folders)
